Colaboratory를 통해 생성됨

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyObjo6bI/lTp+lbr2pkkepc",
+      "authorship_tag": "ABX9TyMgOZ0lV0lYglbO+0G/rtjq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,174 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "#CH2. 서식출력 print()#"
+      ],
       "metadata": {
-        "id": "MiLMrdTvdE5f"
+        "id": "FWKR2A05kUvJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"%d\" % 123)\n",
+        "print(\"%5d\" % 123)\n",
+        "print(\"%05d\" % 123)\n",
+        "\n",
+        "print(\"%f\" % 123.45)\n",
+        "print(\"%7.1f\" % 123.45)\n",
+        "print(\"%7.3f\" % 123.45)\n",
+        "\n",
+        "print(\"%c\" % \"1\")\n",
+        "print(\"%s\" % \"가나다라\")\n",
+        "print(\"%6s\" % \"가나다라\")\n",
+        "print(\"%6s\" % \"abcd\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0bFqqNwKiir6",
+        "outputId": "1dfc93d8-5361-410c-8932-9d21d6474678"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "123\n",
+            "  123\n",
+            "00123\n",
+            "123.450000\n",
+            "  123.5\n",
+            "123.450\n",
+            "1\n",
+            "가나다라\n",
+            "  가나다라\n",
+            "  abcd\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 순서지정가능:format\n"
+      ],
+      "metadata": {
+        "id": "bMYyeEHRkY-p"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"{0:d} {1:5d} {2:05d}\".format(123,456,789))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OL2tJHAzkerp",
+        "outputId": "74584f39-9b84-4fa9-fc0b-40d346a77c5d"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "123   456 00789\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 서식출력\n"
+      ],
+      "metadata": {
+        "id": "fF3Nw1YUlE0p"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"\\n줄 바꿈 명령 \\n연습입니다.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xxDQ24oolJcZ",
+        "outputId": "03ad969a-5e99-4cf4-ff66-90b5eec1b785"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "줄 바꿈 명령 \n",
+            "연습입니다.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print( \"\\t텝키 명령 \\t연습입니다\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wZiKP79AlVcx",
+        "outputId": "434b7c34-83ab-4355-d738-82c5c8d09a90"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\t텝키 명령 \t연습입니다\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"따옴표 글자가 \\\"강조\\\"되는 효과1\")\n",
+        "print(\"따옴표 글자가 \\'강조\\'되는 효과2\")\n",
+        "print(\"역슬래시 3개를 출력하려면 \\\\\\\\\\\\ 6개\")\n",
+        "print(r\"\\n \\t \\\" \\\\ \\' @를 그대로 출력\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3M_CofHxlfoZ",
+        "outputId": "e7fe54aa-7f73-49a9-cadd-1ef95a03d77c"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "따옴표 글자가 \"강조\"되는 효과1\n",
+            "따옴표 글자가 '강조'되는 효과2\n",
+            "역슬래시 3개를 출력하려면 \\\\\\ 6개\n",
+            "\\n \\t \\\" \\\\ \\' @를 그대로 출력\n"
+          ]
+        }
+      ]
     }
   ]
 }
